@@ -16,9 +16,18 @@
 
 package uk.ac.cam.cl.dtg.isaac.api;
 
+import static java.time.ZoneOffset.UTC;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.ENDDATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.EVENT_TYPE;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_LOCATE_USER;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.PRIVATE_EVENT_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ADMIN_BOOKING_REASON_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ATTENDED_FIELDNAME;
@@ -29,11 +38,13 @@ import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_TAGS_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EventFilterOption;
+import static uk.ac.cam.cl.dtg.segue.api.Constants.ID_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.NEVER_CACHE_WITHOUT_ETAG_CHECK;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.STAGE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SegueServerLogType;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SortOrder;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TAGS_FIELDNAME;
+import static uk.ac.cam.cl.dtg.segue.api.Constants.TITLE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TYPE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_LIST_FKEY_FIELDNAME;
@@ -62,12 +73,13 @@ import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.Response.Status;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.text.SimpleDateFormat;
+import java.time.Instant;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Calendar;
 import java.util.Collections;
-import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -230,19 +242,19 @@ public class EventsFacade extends AbstractIsaacFacade {
     }
 
     final Map<String, Constants.SortOrder> sortInstructions = Maps.newHashMap();
-    if (sortOrder != null && sortOrder.equals("title")) {
-      sortInstructions.put(Constants.TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
+    if (sortOrder != null && sortOrder.equals(TITLE_FIELDNAME)) {
+      sortInstructions.put(TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
           SortOrder.ASC);
     } else {
       sortInstructions.put(DATE_FIELDNAME, SortOrder.DESC);
     }
 
-    fieldsToMatch.put(TYPE_FIELDNAME, Arrays.asList(EVENT_TYPE));
+    fieldsToMatch.put(TYPE_FIELDNAME, List.of(EVENT_TYPE));
 
     Map<String, AbstractFilterInstruction> filterInstructions = null;
     if (null != showActiveOnly && showActiveOnly) {
       filterInstructions = Maps.newHashMap();
-      DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(new Date(), null);
+      DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(Instant.now(), null);
       filterInstructions.put(ENDDATE_FIELDNAME, anyEventsFromNow);
       sortInstructions.put(DATE_FIELDNAME, SortOrder.ASC);
     }
@@ -254,7 +266,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       }
 
       filterInstructions = Maps.newHashMap();
-      DateRangeFilterInstruction anyEventsToNow = new DateRangeFilterInstruction(null, new Date());
+      DateRangeFilterInstruction anyEventsToNow = new DateRangeFilterInstruction(null, Instant.now());
       filterInstructions.put(ENDDATE_FIELDNAME, anyEventsToNow);
       sortInstructions.put(DATE_FIELDNAME, SortOrder.DESC);
     }
@@ -304,8 +316,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(findByFieldNames).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error accessing your bookings.")
@@ -340,7 +352,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       if (tags != null) {
         Set<String> tagsList = Sets.newHashSet(tags);
         tagsList.retainAll(eventDTOById.getTags()); // get intersection
-        if (tagsList.size() == 0) {
+        if (tagsList.isEmpty()) {
           // if the intersection is empty then we can continue
           continue;
         }
@@ -399,11 +411,11 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The event specified does not exist.").toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
-      log.error("Error during event request", e);
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error resolving event bookings.")
           .toResponse();
     }
@@ -431,7 +443,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -465,7 +477,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The booking you requested does not exist.").toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -511,7 +523,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EventIsFullException e) {
       return new SegueErrorResponse(Status.CONFLICT,
@@ -526,7 +538,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The user doesn't exist, so unable to book them onto an event", e)
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -554,7 +566,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       List<DetailedEventBookingDTO> eventBookings = bookingManager.adminGetBookingsByEventId(eventId);
 
-      if (Arrays.asList(Role.EVENT_LEADER).contains(currentUser.getRole())) {
+      if (Role.EVENT_LEADER.equals(currentUser.getRole())) {
         eventBookings = userAssociationManager.filterUnassociatedRecords(currentUser, eventBookings,
             booking -> booking.getUserBooked().getId());
       }
@@ -564,7 +576,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException | ContentManagerException e) {
-      String message = "Database error occurred while trying to retrieve all event booking information.";
+      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     }
@@ -714,7 +726,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       CSVWriter csvWriter = new CSVWriter(stringWriter);
       StringBuilder headerBuilder = new StringBuilder();
       headerBuilder.append(String.format("Event (%s) Attendance: Downloaded on %s \nGenerated by: %s %s \n\n",
-          eventId, new Date(), currentUser.getGivenName(),
+          eventId, Instant.now(), currentUser.getGivenName(),
           currentUser.getFamilyName()));
 
       List<String> headerRow = Lists.newArrayList(Arrays.asList("", ""));
@@ -724,7 +736,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       List<String> totalsRow = Lists.newArrayList();
 
       List<String[]> resultRows = Lists.newArrayList();
-      SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
+      DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd").withZone(UTC);
 
       for (DetailedEventBookingDTO booking : eventBookings) {
         ArrayList<String> resultRow = Lists.newArrayList();
@@ -761,7 +773,6 @@ public class EventsFacade extends AbstractIsaacFacade {
             .map(uc -> uc.getStage() != null ? uc.getStage().name() : "").collect(Collectors.toSet())));
         resultRow.add(String.join(" ", resultUser.getRegisteredContexts().stream()
             .map(uc -> uc.getExamBoard() != null ? uc.getExamBoard().name() : "").collect(Collectors.toSet())));
-        resultRow.add(resultAdditionalInformation.get("experienceLevel"));
         resultRow.add(resultAdditionalInformation.get("dietaryRequirements"));
         resultRow.add(resultAdditionalInformation.get("accessibilityRequirements"));
         resultRow.add(resultAdditionalInformation.get("emergencyName"));
@@ -772,7 +783,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       rows.add(totalsRow.toArray(new String[0]));
       rows.add(("Family name,Given name,Role,School,Booking status,Booking date,Last updated date,Year group,"
           // lgtm [java/missing-space-in-concatenation]
-          + "Job title,Stages,Exam boards,Level of teaching experience,dietary requirements,"
+          + "Job title,Stages,Exam boards,dietary requirements,"
           + "Accessibility requirements,Emergency name,Emergency number").split(","));
       rows.addAll(resultRows);
       csvWriter.writeAll(rows);
@@ -788,12 +799,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String message = "Database error occurred while trying to retrieve all event booking information.";
+      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (UnableToIndexSchoolsException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Database error while looking up schools", e)
@@ -851,21 +862,21 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "Unable to locate the user requested").toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (DuplicateBookingException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
           "User already booked on this event. Unable to create a duplicate booking.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -957,7 +968,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserException e) {
       return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate one of the users specified.");
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -981,7 +992,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       IsaacEventPageDTO event = getRawEventDTOById(eventId);
       RegisteredUserDTO userLoggedIn = this.userManager.getCurrentRegisteredUser(request);
 
-      if (event.getDate() != null && new Date().after(event.getDate())) {
+      if (event.getDate() != null && Instant.now().isAfter(event.getDate())) {
         return new SegueErrorResponse(Status.BAD_REQUEST,
             "You cannot cancel a reservation on an event that has already started.")
             .toResponse();
@@ -1028,15 +1039,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     }
   }
 
@@ -1092,12 +1103,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1117,7 +1128,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The booking deadline for this event has passed. No more bookings are being accepted.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -1150,12 +1161,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1176,7 +1187,7 @@ public class EventsFacade extends AbstractIsaacFacade {
               + " Please use the request booking endpoint to book you on to it.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -1225,18 +1236,16 @@ public class EventsFacade extends AbstractIsaacFacade {
         userOwningBooking = this.userManager.getUserDTOById(userId);
       }
 
-      if (event.getDate() != null && new Date().after(event.getDate())) {
+      if (event.getDate() != null && Instant.now().isAfter(event.getDate())) {
         return new SegueErrorResponse(Status.BAD_REQUEST,
             "You cannot cancel a booking on an event that has already started.")
             .toResponse();
       }
 
       // if the user id is null then it means they are changing their own booking.
-      if (userId != null) {
-        if (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
-            || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event))) {
-          return SegueErrorResponse.getIncorrectRoleResponse();
-        }
+      if (userId != null && (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
+          || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event)))) {
+        return SegueErrorResponse.getIncorrectRoleResponse();
       }
 
       Set<BookingStatus> cancelableStatuses =
@@ -1260,15 +1269,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     }
   }
 
@@ -1299,8 +1308,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       this.bookingManager.resendEventEmail(event, bookedUser);
 
-      log.info(String.format("User (%s) has just resent an event email to user id (%s)",
-          currentUser.getEmail(), bookedUser.getId()));
+      log.info("User ({}) has just resent an event email to user id ({})", currentUser.getEmail(), bookedUser.getId());
 
       return Response.noContent().build();
     } catch (NoUserLoggedInException e) {
@@ -1310,11 +1318,11 @@ public class EventsFacade extends AbstractIsaacFacade {
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     } catch (EventIsCancelledException e) {
       return SegueErrorResponse.getBadRequestResponse("Event is cancelled, cannot resent event emails.");
     }
@@ -1363,14 +1371,14 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     }
   }
@@ -1428,7 +1436,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EventBookingUpdateException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1481,17 +1489,16 @@ public class EventsFacade extends AbstractIsaacFacade {
         EventFilterOption filterOption = EventFilterOption.valueOf(filter);
         filterInstructions = Maps.newHashMap();
         if (filterOption.equals(EventFilterOption.FUTURE)) {
-          DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(new Date(), null);
+          DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(Instant.now(), null);
           filterInstructions.put(ENDDATE_FIELDNAME, anyEventsFromNow);
           sortInstructions.put(DATE_FIELDNAME, SortOrder.ASC);
         } else if (filterOption.equals(EventFilterOption.RECENT)) {
-          Calendar calendar = Calendar.getInstance();
-          calendar.add(Calendar.MONTH, -1);
+          Instant oneMonthAgo = ZonedDateTime.now().minus(1L, ChronoUnit.MONTHS).toInstant();
           DateRangeFilterInstruction eventsOverPreviousMonth =
-              new DateRangeFilterInstruction(calendar.getTime(), new Date());
+              new DateRangeFilterInstruction(oneMonthAgo, Instant.now());
           filterInstructions.put(ENDDATE_FIELDNAME, eventsOverPreviousMonth);
         } else if (filterOption.equals(EventFilterOption.PAST)) {
-          DateRangeFilterInstruction anyEventsToNow = new DateRangeFilterInstruction(null, new Date());
+          DateRangeFilterInstruction anyEventsToNow = new DateRangeFilterInstruction(null, Instant.now());
           filterInstructions.put(ENDDATE_FIELDNAME, anyEventsToNow);
         }
 
@@ -1511,20 +1518,19 @@ public class EventsFacade extends AbstractIsaacFacade {
       List<Map<String, Object>> resultList = Lists.newArrayList();
 
       for (ContentDTO c : findByFieldNames.getResults()) {
-        if (!(c instanceof IsaacEventPageDTO)) {
+        if (!(c instanceof IsaacEventPageDTO event)) {
           continue;
         }
-        IsaacEventPageDTO event = (IsaacEventPageDTO) c;
 
         if (!bookingManager.isUserAbleToManageEvent(currentUser, event)) {
           continue;
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put("id", event.getId());
-        eventOverviewBuilder.put("title", event.getTitle());
+        eventOverviewBuilder.put(ID_FIELDNAME, event.getId());
+        eventOverviewBuilder.put(TITLE_FIELDNAME, event.getTitle());
         eventOverviewBuilder.put("subtitle", event.getSubtitle());
-        eventOverviewBuilder.put("date", event.getDate());
+        eventOverviewBuilder.put(DATE_FIELDNAME, event.getDate());
         eventOverviewBuilder.put("bookingDeadline",
             event.getBookingDeadline() == null ? event.getDate() : event.getBookingDeadline());
         eventOverviewBuilder.put("eventStatus", event.getEventStatus());
@@ -1559,8 +1565,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
@@ -1626,7 +1632,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     Map<String, AbstractFilterInstruction> filterInstructions = null;
     if (null == showActiveOnly || showActiveOnly) {
       filterInstructions = Maps.newHashMap();
-      DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(new Date(), null);
+      DateRangeFilterInstruction anyEventsFromNow = new DateRangeFilterInstruction(Instant.now(), null);
       filterInstructions.put(ENDDATE_FIELDNAME, anyEventsFromNow);
       sortInstructions.put(DATE_FIELDNAME, SortOrder.ASC);
     }
@@ -1641,11 +1647,10 @@ public class EventsFacade extends AbstractIsaacFacade {
       List<Map<String, Object>> resultList = Lists.newArrayList();
 
       for (ContentDTO c : findByFieldNames.getResults()) {
-        if (!(c instanceof IsaacEventPageDTO)) {
+        if (!(c instanceof IsaacEventPageDTO e)) {
           continue;
         }
 
-        IsaacEventPageDTO e = (IsaacEventPageDTO) c;
         if (null == e.getLocation() || null == e.getLocation().getLatitude() && null == e.getLocation()
             .getLongitude()) {
           // Ignore events without locations.
@@ -1658,9 +1663,9 @@ public class EventsFacade extends AbstractIsaacFacade {
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put("id", e.getId());
-        eventOverviewBuilder.put("title", e.getTitle());
-        eventOverviewBuilder.put("date", e.getDate());
+        eventOverviewBuilder.put(ID_FIELDNAME, e.getId());
+        eventOverviewBuilder.put(TITLE_FIELDNAME, e.getTitle());
+        eventOverviewBuilder.put(DATE_FIELDNAME, e.getDate());
         eventOverviewBuilder.put("subtitle", e.getSubtitle());
         if (e.getEventStatus() != null) {
           eventOverviewBuilder.put("status", e.getEventStatus());
@@ -1679,8 +1684,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     }
   }
